--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <br><br>
                 <!-- for Square -->
                 <label for="square">Square</label><br>
-                <input type="number" id="square-sidelength" placeholder="length(px)"><br>
+                <input type="number" id="square-sidelength" placeholder="length(px)"max="600"><br>
                 <input class="btn btn-primary m-2" id="square-button" type="button" value="Insert">
                 <br><br>
                 <!-- for Circle -->
@@ -47,17 +47,17 @@
             <div class="sidepanel">
                 <form>
                     <label for="Shape Name">Shape Name</label>
-                    <input type="text"><br>
+                    <input type="text" id = "shape-name"><br>
                     <label class="width"for="Width">Width</label>
-                    <input type="value"><br>
+                    <input type="value" id = "width" ><br>
                     <label class="height"for="Height">Height</label>
-                    <input type="value"><br>
+                    <input type="value"id = "height"><br>
                     <label class="radius"for="Radius">Radius</label>
-                    <input type="value"><br>
+                    <input type="value"id = "radius"><br>
                     <label class="area"for="Area">Area</label>
-                    <input type="value"><br>
+                    <input type="value"id = "area"><br>
                     <label class="perimeter"for="Perimeter">Perimeter</label>
-                    <input type="value">
+                    <input type="value"id = "perimeter">
                 </form>
             </div>
 
